--- a/src/it/classifier/pom.xml
+++ b/src/it/classifier/pom.xml
@@ -23,7 +23,7 @@
             </goals>
             <configuration>
               <artifacts>
-                <artifact>net.stickycode:sticky-coercion:jar:sources:[2.1,3)</artifact>
+                <artifact>net.stickycode:sticky-coercion:[2.1,3):sources:jar</artifact>
               </artifacts>
             </configuration>
           </execution>
