--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,12 @@
       <version>[3.5.1]</version>
       <scope>provided</scope>
     </dependency>
+    
+    <dependency>
+      <groupId>org.codehaus.plexus</groupId>
+      <artifactId>plexus-archiver</artifactId>
+      <version>3.6.0</version>
+    </dependency>
 
     <dependency>
       <groupId>org.apache.maven</groupId>
