--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Copyright (c) 2012 RedEngine Ltd, http://www.redengine.co.nz. All rights reserved. -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd" xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <parent>
     <groupId>net.stickycode.parent</groupId>
     <artifactId>sticky-parent-jar8</artifactId>
@@ -10,7 +10,7 @@
 
   <groupId>net.stickycode.plugins</groupId>
   <artifactId>shifty-maven-plugin</artifactId>
-  <version>1.4-SNAPSHOT</version>
+  <version>2.1-SNAPSHOT</version>
   <packaging>maven-plugin</packaging>
 
   <name>shifty-maven-plugin-1</name>
@@ -25,27 +25,27 @@
   </scm>
 
   <prerequisites>
-    <maven>3.5.0</maven>
+    <maven>3.6.0</maven>
   </prerequisites>
 
   <dependencies>
     <dependency>
       <groupId>org.apache.maven</groupId>
       <artifactId>maven-embedder</artifactId>
-      <version>[3.5.2]</version>
+      <version>[3.6.2]</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>net.stickycode.composite</groupId>
       <artifactId>sticky-composite-unittest</artifactId>
-      <version>[3.7,4)</version>
+      <version>[4.1,5)</version>
       <scope>test</scope>
     </dependency>
 
     <dependency>
       <groupId>org.apache.maven.plugin-tools</groupId>
       <artifactId>maven-plugin-annotations</artifactId>
-      <version>[3.5.1]</version>
+      <version>[3.6.0]</version>
       <scope>provided</scope>
     </dependency>
     
@@ -58,12 +58,12 @@
     <dependency>
       <groupId>org.apache.maven</groupId>
       <artifactId>maven-plugin-api</artifactId>
-      <version>[3.5.2]</version>
+      <version>[3.6.2]</version>
     </dependency>
     <dependency>
       <groupId>org.apache.maven</groupId>
       <artifactId>maven-core</artifactId>
-      <version>[3.5.2]</version>
+      <version>[3.6.2]</version>
     </dependency>
 
   </dependencies>
