--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Copyright (c) 2012 RedEngine Ltd, http://www.redengine.co.nz. All rights reserved. -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <parent>
-    <groupId>net.stickycode.parent</groupId>
-    <artifactId>sticky-parent-jar8</artifactId>
-    <version>3.1</version>
+    <groupId>net.stickycode.stable.parent</groupId>
+    <artifactId>sticky-parent</artifactId>
+    <version>1.4</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
@@ -27,6 +26,12 @@
   <prerequisites>
     <maven>3.6.0</maven>
   </prerequisites>
+
+
+  <properties>
+    <maven.compiler.source>11</maven.compiler.source>
+    <maven.compiler.target>11</maven.compiler.target>
+  </properties>
 
   <dependencies>
     <dependency>
@@ -70,6 +75,16 @@
 
   <build>
     <plugins>
+      <plugin>
+        <groupId>io.repaint.maven</groupId>
+        <artifactId>tiles-maven-plugin</artifactId>
+        <version>2.29</version>
+        <configuration>
+          <tiles>
+            <tile>net.stickycode.tile:sticky-tile-release:[1,2)</tile>
+          </tiles>
+        </configuration>
+      </plugin>
       <plugin>
         <artifactId>maven-plugin-plugin</artifactId>
         <version>3.6.0</version>
