--- a/pom.xml
+++ b/pom.xml
@@ -94,7 +94,7 @@
       </plugin>
       <plugin>
         <artifactId>maven-invoker-plugin</artifactId>
-        <version>3.0.1</version>
+        <version>3.3.0</version>
         <configuration>
           <projectsDirectory>src/it</projectsDirectory>
           <cloneProjectsTo>${project.build.directory}/it</cloneProjectsTo>
@@ -105,7 +105,7 @@
           <postBuildHookScript>verify.bsh</postBuildHookScript>
           <showVersion>true</showVersion>
           <showErrors>true</showErrors>
-
+          <parallelThreads>1C</parallelThreads>
         </configuration>
         <executions>
           <execution>
